Adicionando novos conteúdos

--- a/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-1-html-css-estruturas-de-pagina/exercicio-1.html/index.html
+++ b/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-1-html-css-estruturas-de-pagina/exercicio-1.html/index.html
@@ -7,6 +7,22 @@
     <title>HTML</title>
 </head>
 <body>
+    <h1>Aprendizados</h1>
+    <h2>Meu aprendizado começa aqui e agora!</h2>
+    <p><em>Hoje começo minha jornada na Trybe!</em> 
+    <br> <strong>Com muito esforço e apoio</strong>
+     vou ne tornar uma pessoa dsenvolvedora muito capaz!
+    </p>
+
+    <ol>
+        <li>CSS</li>
+        <li>Posicionamento em CSS</li>
+        <li>HTML Semântico</li>
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Flexbox</li>
+    </ol>
+
     <h1>Exercícios</h1>
 
     <h3>Lista de Amizades Trybe</h3>
