--- a/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -5,11 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloco 03: Introdução à HTML e CSS | Aula 01</title>
+    <style>
+        h1 {
+            color: orange;
+            font-size: 65px;
+        }
+
+        ul {
+            background-color:black;
+            list-style-type: none;
+            color: rgb(250, 249, 236);
+            text-decoration: none;
+        }
+
+        .style-tags {
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
-    <h1>Exercício 3.1</h1>
+    <h1>Exercícios</h1>
     <h4>Lista de Amizades Trybe</h4>
-    <ul>
+    <ul class="style-tags">
         <li><a href="#trybe1">André Melo</a></li>
         <li><a href="#trybe2">Léo</a></li>
         <li><a href="#trybe3">Karina Arruda</a></li>
@@ -25,38 +42,38 @@
     <h2>Veni, Vidi, Vici</h2>
     <img src="imagens/V.png" alt="Imagem em preto e branco da personagem V" width="500px">
 
-    <p id="trybe1"><strong>André Melo</strong>
+    <p class="style-tags" id="trybe1"><strong>André Melo</strong>
         <br>
 
         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </p>
     <hr>
 
-    <p id="trybe2"><strong>Léo</strong>
+    <p class="style-tags" id="trybe2"><strong>Léo</strong>
         <br>
         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </p>
     <hr>
 
-    <p id="trybe3"><strong>Karina Arruda</strong>
+    <p class="style-tags" id="trybe3"><strong>Karina Arruda</strong>
         <br>
         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </p>
     <hr>
 
-    <p id="trybe4"><strong>Zezé</strong>
+    <p class="style-tags" id="trybe4"><strong>Zezé</strong>
         <br>
         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </p>
     <hr>
 
-    <p id="trybe5"><strong>Panta</strong>
+    <p class="style-tags" id="trybe5"><strong>Panta</strong>
         <br>
         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </p>
     <hr>
 
-    <p id="trybe6"><strong>Tio Jack</strong>
+    <p class="style-tags" id="trybe6"><strong>Tio Jack</strong>
         <br>
         It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
     </p>
