--- a/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -8,9 +8,15 @@
 
     <style>
 
+        body {
+            font-size: 16px;
+        }
+
         h1 {
             color: orange;
+            font-family: sans-serif;
             font-size: 65px;
+            font-weight: 600px;
         }
         
         li {
@@ -20,6 +26,41 @@
         .list-color {
             background-color: aqua;
         }
+
+        p {
+            font-size: 3em;
+        }
+
+        .yellow-color {
+            background-color: yellow;
+            font-style: normal;
+            line-height: 20px;
+            text-align: right;
+            list-style: none;
+        }
+
+        .red-color {
+            background-color: red;
+            font-style: italic;
+            line-height: 25px;
+            list-style: none;
+        }
+
+        .brown-color {
+            background-color: brown;
+            font-style: oblique;
+            line-height: 30px;
+            text-align: right;
+            list-style: none;
+        }
+
+        .black-color {
+            background-color: black;
+            color: white;
+            font-style: oblique;
+            line-height: 20px;
+            list-style: none;
+        }
     </style>
 </head>
 <body>
@@ -27,10 +68,10 @@
 
     <p class="list-color">Qual a sua cor favorita?</p>
     <ul class="list-color">
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>
-        <li>Preto</li>
+        <li class="yellow-color">Amarelo</li>
+        <li class="red-color">Vermelho</li>
+        <li class="brown-color">Marrom</li>
+        <li class="black-color">Preto</li>
     </ul>
 </body>
 </html>
