--- a/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -5,63 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercícios 3.2 | Trybe</title>
-
-    <style>
-
-        body {
-            font-size: 16px;
-        }
-
-        h1 {
-            color: orange;
-            font-family: sans-serif;
-            font-size: 65px;
-            font-weight: 600px;
-        }
-        
-        li {
-            background-color: green;
-        }
-
-        .list-color {
-            background-color: aqua;
-        }
-
-        p {
-            font-size: 3em;
-        }
-
-        .yellow-color {
-            background-color: yellow;
-            font-style: normal;
-            line-height: 20px;
-            text-align: right;
-            list-style: none;
-        }
-
-        .red-color {
-            background-color: red;
-            font-style: italic;
-            line-height: 25px;
-            list-style: none;
-        }
-
-        .brown-color {
-            background-color: brown;
-            font-style: oblique;
-            line-height: 30px;
-            text-align: right;
-            list-style: none;
-        }
-
-        .black-color {
-            background-color: black;
-            color: white;
-            font-style: oblique;
-            line-height: 20px;
-            list-style: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Exercícios 3.2</h1>
