--- a/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-4-html-semantico/2. exercises-3.4/index.html
+++ b/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-4-html-semantico/2. exercises-3.4/index.html
@@ -19,17 +19,43 @@
         </ul>
     </nav>
     <main id="main-container">
-        <section>
-            <header>
-
-            </header>
-            <article>
-
+            <article class="article-container">
+                <section class="section-container-specie">
+                    <h2>Matis Shrimp</h2>
+                    <table>
+                        <tr>
+                            <th class="theader">Nome</th>
+                            <td>Odontodactylus scyllarus</td>
+                        </tr>
+                        <tr>
+                            <th class="theader">Reino</th>
+                            <td>Animalia</td>
+                        </tr>
+                        <tr>
+                            <th class="theader">Filo</th>
+                            <td>Arthropoda</td>
+                        </tr>
+                        <tr>
+                            <th class="theader">Subfilo</th>
+                            <td>Crustacea</td>
+                        </tr>
+                        <tr>
+                            <th class="theader">Classe</th>
+                            <td>Malacostraca</td>
+                        </tr>
+                        <tr>
+                            <th class="theader">Subclasse</th>
+                            <td>Hoplocarida</td>
+                        </tr>
+                        <tr>
+                            <th class="theader">Ordem</th>
+                            <td>Stomatopoda</td>
+                        </tr>
+                    </table>
+                        <img class="image-1" src="image/mantis_shrimp_1.jpg" alt="">
+                        <img class="image-2" src="image/mantis_shrimp_2.jpg" alt="">
+                </section>
             </article>
-            <footer>
-
-            </footer>
-        </section>
     </main>
     <aside id="aside-container">
 
