--- a/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-4-html-semantico/2. exercises-3.4/index.html
+++ b/Fundamentos/Bloco.03 - Introducao a HTML e CSS/dia-4-html-semantico/2. exercises-3.4/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main id="main-container">
             <article class="article-container">
-                <section class="section-container-specie">
+                <section class="section-container-species">
                     <h2>Matis Shrimp</h2>
                     <table>
                         <tr>
@@ -54,6 +54,36 @@
                     </table>
                         <img class="image-1" src="image/mantis_shrimp_1.jpg" alt="">
                         <img class="image-2" src="image/mantis_shrimp_2.jpg" alt="">
+                </section>
+                <section class="section-container-curiosities">
+                    <h2>Curiosities</h2>
+                    <div class="curiosities-1">
+                        <h4>Quick as a bullet and strong as a bull.</h4>
+                        <p>
+                            Shrimp Mantis can be classified into two groups: those that have punch attack (spearers) and crush attack (smashers). With this, the crushers are considered one of the strongest and fastest animals on the planet, for having a quick attack like a bullet and strong like a bull.
+                        </p>
+                    </div> 
+                    <div class="curiosities-2">
+                        <h4>The most complex eyes in the animal kingdom</h4>
+                        <p>
+                            One of the species of mantis shrimp (Gonodactylus smithii) has the most complex eyes in the animal kingdom and is able to see colors that are invisible to many other animals, from the ultraviolet to the infrared.
+                        </p>
+                    </div>
+                    <div class="curiosities-3">
+                        <h4>Distant relationship</h4>
+                        <p>
+                            Despite its namesake, the Shrimp Mantis is a species of crustacean of the order Stomatopods (Stomatopoda) — distant relatives of crabs, shrimp and lobsters — and has more than 400 different species.
+                        </p>
+                    </div>
+                    <div class="curiosities-4">
+                        <h4>The Big Family</h4>
+                        <p>
+                            One of the most famous species is the crushing Clown Mantis (Odontodactylus scyllarus), very similar to a praying mantis, known for its beauty and dangerousness in saltwater aquariums.
+                        </p>
+                        <p>
+                            The Mantis Shrimp family has species beyond interesting, so much so that one of them was fundamental for the composition of a character in the movie Project Power. We're talking about snapping shrimp: when it closes its developed claws with extreme force and speed, it produces not only a very loud popping sound, but also a super hot shock wave that hits its prey fatally (something very similar to the ability of his “cousin”).
+                        </p>
+                    </div>
                 </section>
             </article>
     </main>
