--- a/Fundamentos/Bloco.05 - JavaScript: DOM, Eventos e Web Storage/dia-1-javascript-dom-e-seletores/Exercises-Example/Exercises/index.html
+++ b/Fundamentos/Bloco.05 - JavaScript: DOM, Eventos e Web Storage/dia-1-javascript-dom-e-seletores/Exercises-Example/Exercises/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Administrador do Tempo</title>
   </head>
   <body id="container">
     <header id="header-container">
       <h1>Administrador do Tempo da Trybe</h1>
     </header>
-
     <section class="emergency-tasks">
       <div>
         <h3>Urgente e Importante</h3>
