--- a/Fundamentos/Bloco.05 - JavaScript: DOM, Eventos e Web Storage/dia-2-javascript-trabalhando-com-elementos/Exercises/second-part/index.html
+++ b/Fundamentos/Bloco.05 - JavaScript: DOM, Eventos e Web Storage/dia-2-javascript-trabalhando-com-elementos/Exercises/second-part/index.html
@@ -57,17 +57,72 @@
   </head>
   <body>
     <script>
-      // 1 - Adicione a classe title na tag h1 criada;
+       let title = document.createElement("h1");
+      title.innerText = "Exercício 5.2 - JavaScript DOM";
+      title.className = "title";
+      document.body.appendChild(title);
 
-      // 2 - Adicione a classe description nas 3 tags h3 criadas;
+      let mainContainer = document.createElement("main");
+      mainContainer.className = "main-content";
+      document.body.appendChild(mainContainer);
 
-      // 3 - Remova a section criado no passo 5 (aquele que possui a classe left-content ). Utilize a função .removeChild() ;
+      let childMain = document.createElement("section");
+      childMain.className = "center-content";
+      mainContainer.appendChild(childMain);
 
-      // 4 - Centralize a section criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto da section ;
+      let childParagraph = document.createElement("p");
+      childParagraph.innerText = "Se tivesse acreditado nas minha brincadeiras de dizer verdades, teria ouvido verdade que tei em dizer brincando. Falei como palhaço, mas, jamais duvidei da seriedade de quem sorria. - Charles Chaplin";
+      childMain.appendChild(childParagraph);
 
-      // 5 - Troque a cor de fundo do elemento pai da section criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
+      let secondChildMain = document.createElement("section");
+      secondChildMain.className = "left-content";
+      mainContainer.appendChild(secondChildMain);
 
-      // 6 - Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
+      let thirdChildMain = document.createElement("section");
+      thirdChildMain.className = "right-content";
+      mainContainer.appendChild(thirdChildMain);
+
+
+      let childImage = document.createElement("img");
+      childImage.className = "small-image";
+      childImage.src = "https://picsum.photos/200";
+      secondChildMain.appendChild(childImage);
+
+      let childOfThirdChildMain = document.createElement("ul");
+      thirdChildMain.appendChild(childOfThirdChildMain);
+
+      let listItems = ["um", "dois", "três", "quatro", "cinco", "seis", "sete", "oito", "nove", "dez"];
+      for (let idx = 0; idx < listItems.length; idx += 1) {
+        let childOfChildOfThirdChildMain = listItems[idx];
+        
+        let numbersTextList = document.createElement("li");
+        numbersTextList.innerText = childOfChildOfThirdChildMain;
+        numbersTextList.className = "list-numbers"
+
+        childOfThirdChildMain.appendChild(numbersTextList);
+      }
+
+
+      let subtitles = 3;
+      for (let idx = 1; idx <= subtitles; idx += 1) {
+        let elementH3 = document.createElement("h3");
+        elementH3.innerHTML = "Exercícios";
+        elementH3.className = "description"
+        mainContainer.appendChild(elementH3);
+      }
+
+      secondChildMain.remove();
+      thirdChildMain.style.marginRight = "auto";
+      childMain.style.backgroundColor = "green";
+
+      let removeNumbers = document.querySelectorAll(".list-numbers");
+      for (let index = 0; index <= removeNumbers.length; index += 1) {
+        let removed = removeNumbers[index];
+
+        if (removed.innerText.includes("nove") || removed.innerText.includes("dez")) {
+          childOfThirdChildMain.removeChild(removed);
+        }
+      }
       
     </script>
   </body>
